# napari-pymapmanager

./: README.md  mkdocs.yml  setup.cfg  setup.py  tox.ini
docs/: index.md
src/napari_pymapmanager/: __init__.py  _reader.py  _widget.py  myLogger.py  myRun.py  napari.yaml  table_models.py  utils.py
src/napari_pymapmanager/_tests/: test_reader.py  test_widget.py  test_writer.py
