[metadata]
name = napari-pymapmanager

author = Vasudha Jha
author_email = vajha@ucdavis.edu
url = https://github.com/mapmanager/napari-pymapmanager
license = GPL-3.0-only
description = A napari plugin for PyMapManager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/mapmanager/napari-pymapmanager/issues
    Documentation = https://github.com/mapmanager/napari-pymapmanager#README.md
    Source Code = https://github.com/mapmanager/napari-pymapmanager
    User Support = https://github.com/mapmanager/napari-pymapmanager/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-pymapmanager = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-pymapmanager = napari_pymapmanager:napari.yaml
