[metadata]
name = napari_pymapmanager
description = A napari plugin for PyMapManager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapmanager/napari-pymapmanager
author = Vasudha Jha
author_email = vajha@ucdavis.edu
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/mapmanager/napari-pymapmanager/issues
    Documentation = https://github.com/mapmanager/napari-pymapmanager#README.md
    Source Code = https://github.com/mapmanager/napari-pymapmanager
    User Support = https://github.com/mapmanager/napari-pymapmanager/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-pymapmanager = napari_pymapmanager:napari.yaml

[options.package_data]
napari_pymapmanager =
    napari.yaml
